feat: UI version 1